# DeCempions

./: .flaskenv  .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test.sh
decempions/: .env.example  __init__.py  auth_utils.py  constants.py  json_utils.py  user_utils.py
decempions/database/: connection.py  decempions.sql
decempions/handlers/: __init__.py  edit_user.py  home.py  import_league.py  import_teams.py  import_week_results.py  league.py  login.py  logout.py  play_next_week.py  ranking.py  register.py  standing.py
decempions/repositories/: match_repo.py  result_repo.py  team_repo.py  user_repo.py
decempions/static/: home.css  index.css  league.css  login.css  playnextweek.css  ranking.css  register.css  standing.css  style.css  user.css
decempions/static/js/: carousel.js
decempions/templates/: base.html  home.html  index.html
decempions/templates/auth/: login.html  register.html
decempions/templates/game/: league.html  playnextweek.html  ranking.html  standing.html
decempions/templates/profile/: user.html
