[metadata]
author = Andrea Canepa
author_email = andrea.canepa.12@protonmail.com
description = A football API game in Python using Flask.
license = MIT
license_file = LICENSE


[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = decempions

[flake8]
ignore = W191,E701,E731,W605,E265,C901
exclude = .git,__pycache__,build,dist,__init__.py
max-complexity = 10